SERVER-129226 Serialize DRM lowered exec stages for executionStats (#56341)

GitOrigin-RevId: d8742899be0a98da6363fe65bf7658eb760dee7d